force-app/main/default/objects/Referral_Credits__c/Referral_Credits__c.object-meta.xml
<CustomObject>
    <label>Referral Credit</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Referral Credits Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Credits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>