force-app/main/default/objects/Referral_Credits__c/fields/Accounts_Head__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounts Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referral_Credits4</relationshipName>
    <type>Lookup</type>
</CustomField>