force-app/main/default/objects/Referral_Credits__c/fields/Accounts_Team_Email__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Team_Email__c</fullName>
    <formula>Booking__r.Project__r.Accounts_Team_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accounts Team Email</label>
    <type>Text</type>
</CustomField>