force-app/main/default/objects/Referral_Credits__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved by L1</fullName>
            </value>
            <value>
                <fullName>Approved by L2</fullName>
            </value>
            <value>
                <fullName>Approved by L3</fullName>
            </value>
            <value>
                <fullName>Rejected by L1</fullName>
            </value>
            <value>
                <fullName>Rejected by L2</fullName>
            </value>
            <value>
                <fullName>Rejected by L3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>