force-app/main/default/objects/Referral_Credits__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Referral Credits</relationshipLabel>
    <relationshipName>Referral_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>