force-app/main/default/objects/Referral_Credits__c/fields/Booking_Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Booking_Relationship_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Relationship Manager</label>
    <referenceTo>Relationship_Manager__c</referenceTo>
    <relationshipLabel>Referral Credits</relationshipLabel>
    <relationshipName>Referral_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>