force-app/main/default/objects/Referral_Credits__c/fields/Booking_RM__c.field-meta.xml
<CustomField>
    <fullName>Booking_RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking RM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referral_Credits3</relationshipName>
    <type>Lookup</type>
</CustomField>