force-app/main/default/objects/Referral_Credits__c/fields/Date_Error_Fixed__c.field-meta.xml
<CustomField>
    <fullName>Date_Error_Fixed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Date Error Fixed</label>
    <type>Checkbox</type>
</CustomField>