force-app/main/default/objects/Referral_Credits__c/fields/Existing_Customer_CRN__c.field-meta.xml
<CustomField>
    <fullName>Existing_Customer_CRN__c</fullName>
    <label>Existing Customer CRN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>