force-app/main/default/objects/Referral_Credits__c/fields/Existing_Customer_Flat_no__c.field-meta.xml
<CustomField>
    <fullName>Existing_Customer_Flat_no__c</fullName>
    <label>Existing Customer Flat no</label>
    <length>50</length>
    <type>Text</type>
</CustomField>