force-app/main/default/objects/Referral_Credits__c/fields/Existing_customer_project__c.field-meta.xml
<CustomField>
    <fullName>Existing_customer_project__c</fullName>
    <formula>Reference_Booking__r.RW_Project_Name__c</formula>
    <label>Existing customer project</label>
    <type>Text</type>
</CustomField>