force-app/main/default/objects/Referral_Credits__c/fields/file_attached__c.field-meta.xml
<CustomField>
    <fullName>file_attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>file attached</label>
    <type>Checkbox</type>
</CustomField>