force-app/main/default/objects/Referral_Credits__c/fields/Flat_no__c.field-meta.xml
<CustomField>
    <fullName>Flat_no__c</fullName>
    <label>Flat no.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>