force-app/main/default/objects/Referral_Credits__c/fields/long_text1__c.field-meta.xml
<CustomField>
    <fullName>long_text1__c</fullName>
    <label>long text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>