force-app/main/default/objects/Referral_Credits__c/fields/Long_Text__c.field-meta.xml
<CustomField>
    <fullName>Long_Text__c</fullName>
    <formula>Name_of_Existing_Customer__c &amp; &quot;-&quot; &amp; Booking__r.Unit_No__c</formula>
    <label>Long Text</label>
    <type>Text</type>
</CustomField>