force-app/main/default/objects/Referral_Credits__c/fields/Name_of_Existing_Customer__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Existing_Customer__c</fullName>
    <label>Name of Existing Customer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>