force-app/main/default/objects/Referral_Credits__c/fields/Reference_Booking__c.field-meta.xml
<CustomField>
    <fullName>Reference_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Referral Credits (Reference Booking)</relationshipLabel>
    <relationshipName>Referral_Credits1</relationshipName>
    <type>Lookup</type>
</CustomField>