force-app/main/default/objects/Referral_Credits__c/fields/Referral_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Referral_Amount_Due__c</fullName>
    <label>Referral Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>