force-app/main/default/objects/Referral_Credits__c/fields/Referral_Credit_Approver_L3__c.field-meta.xml
<CustomField>
    <fullName>Referral_Credit_Approver_L3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Credit Approver L3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referral_Credits2</relationshipName>
    <type>Lookup</type>
</CustomField>