force-app/main/default/objects/Referral_Credits__c/fields/Referral_In_Rs__c.field-meta.xml
<CustomField>
    <fullName>Referral_In_Rs__c</fullName>
    <label>Referral (In Rs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>