force-app/main/default/objects/Referral_Credits__c/fields/SAP_Document_Date__c.field-meta.xml
<CustomField>
    <fullName>SAP_Document_Date__c</fullName>
    <label>SAP Document Date</label>
    <type>Date</type>
</CustomField>