force-app/main/default/objects/Referral_Credits__c/fields/TDS_5_to_be_deducted__c.field-meta.xml
<CustomField>
    <fullName>TDS_5_to_be_deducted__c</fullName>
    <label>TDS @5 to be deducted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>