force-app/main/default/objects/Referral_Credits__c/fields/Vendor_Code__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Code__c</fullName>
    <label>Vendor Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>