force-app/main/default/objects/Referral_Credits__c/fields/X1_of_Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>X1_of_Agreement_Value__c</fullName>
    <label>Referral1%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>